--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://903e177e-6fc4-439d-9a61-597afb116cd0.preview.emergentagent.com
 WDS_SOCKET_PORT=443
